<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/partners_list_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F6"
    android:clickable="true">

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_view_with_cancel_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/partners_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        app:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent" />

    <FrameLayout
        android:id="@+id/no_partners_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#EFF1F6"
        android:clickable="true"
        tools:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_do_not_have_partners"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/not_logged_in_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#EFF1F6"
        android:clickable="true"
        android:visibility="gone">
        <Button
            android:id="@+id/button_google_sign_in"
            style="@style/VioletLiningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_google"
            android:paddingRight="20dp"
            android:text="@string/sign_in_with_google"
            android:backgroundTint="@color/colorIcons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>