...
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toEndOf="@id/user_params_header"
                app:layout_constraintTop_toTopOf="@id/user_params_header"/>

            <FrameLayout
                android:id="@+id/layout_button_partners"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rectangular_button_click_selector"
                app:layout_constraintEnd_toStartOf="@+id/layout_button_edit"
...
